--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Associative Engram Demo </title>
+    <title>Associative Engram Process Example </title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="Description" content="Consciousness, progressive perception, and associative memory modelling." />
     <meta name="Keywords" content="associative brain wiring, memory, engrams, perception, association" />
